# repo-analysis

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  TODOS.md
.claude/: settings.json
.claude/hooks/: post-edit-fmt.sh  pre-commit-check.sh  protect-constitution.sh  rust-safety.sh  session-start.sh
.claude/rules/: cargo-config.md  documentation.md  rust-source.md  test-files.md
.claude/skills/add-feature/: SKILL.md
.claude/skills/add-module/: SKILL.md
.claude/skills/analyze-arch/: SKILL.md
.claude/skills/check/: SKILL.md
.claude/skills/fix/: SKILL.md
.claude/skills/go/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/ship/: SKILL.md
.claude/skills/spec/: SKILL.md
.claude/skills/status/: SKILL.md
.claude/skills/test/: SKILL.md
.github/workflows/: ci.yml  release.yml
.repostat/: state.md
Formula/: repostat.rb
docs/: coding-standard.md  constitution.md  decisions.md  requirements.md  tech-stack.md
docs/designs/: phase-9-health-check.md
docs/specs/: ai-augmented-analysis.md  analysis-result-struct.md  cli-argument-parsing.md  config-loading.md  dependency-manifest-parser.md  diff-subcommand.md  documentation-analysis.md  error-handling-gaps.md  file-churn-collection.md  file-scanner.md  generated-minified-detection.md  health-exit-codes.md  history-trends.md  html-dashboard.md  language-detection.md  line-counting.md  parallel-ai-skills.md  risk-score.md  silent-file-read-errors.md  skip-ai-env-var.md  tree-sitter-integration.md  verbose-timing.md  zero-files-warning.md
src/: cli.rs  config.rs  errors.rs  main.rs
src/ai/: claude.rs  mod.rs  schema.rs  skills.rs
src/metrics/: aggregate.rs  complexity.rs  coupling.rs  dependencies.rs  documentation.rs  git_history.rs  loc.rs  mod.rs  risk.rs
src/report/: color.rs  dashboard.rs  html.rs  markdown.rs  mod.rs  trend.rs
src/scanner/: filter.rs  language.rs  mod.rs
src/snapshot/: diff.rs  index.rs  mod.rs  store.rs
tests/: cli_basic.rs
