[package]
name = "repostat"
version = "0.9.0"
edition = "2024"
rust-version = "1.85"
description = "Analyze repository complexity, track coding progress, produce AI-augmented reports"
license = "MIT"
repository = "https://github.com/wiseyoda/repo-analysis"
homepage = "https://github.com/wiseyoda/repo-analysis"
keywords = ["cli", "code-analysis", "complexity", "metrics", "repository"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
crossterm = "0.28"
globset = "0.4"
ignore = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tree-sitter = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-typescript = "0.23"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
tempfile = "3"
